--- a/libs/css/iconmoon.css
+++ b/libs/css/iconmoon.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('/font/icomoon.eot?vw3mxj');
-  src:  url('/font/icomoon.eot?vw3mxj#iefix') format('embedded-opentype'),
-    url('/font/icomoon.ttf?vw3mxj') format('truetype'),
-    url('/font/icomoon.woff?vw3mxj') format('woff'),
-    url('/font/icomoon.svg?vw3mxj#icomoon') format('svg');
+  src:  url('/font/icomoon.eot?7wcrtr');
+  src:  url('/font/icomoon.eot?7wcrtr#iefix') format('embedded-opentype'),
+    url('/font/icomoon.ttf?7wcrtr') format('truetype'),
+    url('/font/icomoon.woff?7wcrtr') format('woff'),
+    url('/font/icomoon.svg?7wcrtr#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,6 +24,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-joomla:before {
+  content: "\e919";
+}
+.icon-git:before {
+  content: "\e91a";
+}
 .icon-webstorm:before {
   content: "\e917";
 }
