--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -65,8 +65,8 @@ body {
   color: $blue-regular;
 
   &:hover {
-    border-color: $gray-regular;
-    color: $gray-regular;
+    border-color: $blue-darkness;
+    color: $blue-darkness;
   }
 }
 
