--- a/libs/css/iconmoon.css
+++ b/libs/css/iconmoon.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('/font/icomoon.eot?51vaua');
-  src:  url('/font/icomoon.eot?51vaua#iefix') format('embedded-opentype'),
-    url('/font/icomoon.ttf?51vaua') format('truetype'),
-    url('/font/icomoon.woff?51vaua') format('woff'),
-    url('/font/icomoon.svg?51vaua#icomoon') format('svg');
+  src:  url('/font/icomoon.eot?u8360q');
+  src:  url('/font/icomoon.eot?u8360q#iefix') format('embedded-opentype'),
+    url('/font/icomoon.ttf?u8360q') format('truetype'),
+    url('/font/icomoon.woff?u8360q') format('woff'),
+    url('/font/icomoon.svg?u8360q#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,6 +24,22 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-qrcode .path1:before {
+  content: "\e91d";
+  color: rgb(255, 255, 255);
+}
+.icon-qrcode .path2:before {
+  content: "\e91e";
+}
+.icon-qr-code:before {
+  content: "\e91c";
+}
+.icon-trophy:before {
+  content: "\e99e";
+}
+.icon-check:before {
+  content: "\ea11";
+}
 .icon-award:before {
   content: "\e91b";
 }
@@ -107,10 +123,4 @@
 }
 .icon-viber:before {
   content: "\e916";
-}
-.icon-trophy:before {
-  content: "\e99e";
-}
-.icon-check:before {
-  content: "\ea11";
 }
